--- a/packages/marketplace/src/styles/pages/developer-submit-app-successfully.scss
+++ b/packages/marketplace/src/styles/pages/developer-submit-app-successfully.scss
@@ -1,4 +1,5 @@
 .wrapDeveloperSuccess {
   max-width: 768px;
+  width: 768px;
   flex-grow: 0;
 }
